syntax = "proto3";
message BackupVersionandInfo {
    string whatsapp_version = 1; // Whatsapp version, for example "2.22.4.14"
    string substringedUserJid = 3; // The last two characters of the user's Jid (phone number)
    optional bool idk = 4; // No idea what this is
    optional bool call_log = 5; // Booleans that indicate various features
    optional bool labeled_jid = 6;
    optional bool message_fts = 7;
    optional bool blank_me_jid = 8;
    optional bool message_link = 9;
    optional bool message_main = 10;
    optional bool message_text = 11;
    optional bool missed_calls = 12;
    optional bool receipt_user = 13;
    optional bool message_media = 14;
    optional bool message_vcard = 15;
    optional bool message_future = 16;
    optional bool message_quoted = 17;
    optional bool message_system = 18;
    optional bool receipt_device = 19;
    optional bool message_mention = 20;
    optional bool message_revoked = 21;
    optional bool broadcast_me_jid = 22;
    optional bool message_frequent = 23;
    optional bool message_location = 24;
    optional bool participant_user = 25;
    optional bool message_thumbnail = 26;
    optional bool message_send_count = 27;
    optional bool migration_jid_store = 28;
    optional bool payment_transaction = 29;
    optional bool migration_chat_store = 30;
    optional bool quoted_order_message = 31;
    optional bool media_migration_fixer = 32;
    optional bool quoted_order_message_v2 = 33;
    optional bool message_main_verification = 34;
    optional bool quoted_ui_elements_reply_message = 35;
    optional bool alter_message_ephemeral_to_message_ephemeral_remove_column = 36;
    optional bool alter_message_ephemeral_setting_to_message_ephemeral_setting_remove_column = 37;
}
